--- a/task3Interface/pom.xml
+++ b/task3Interface/pom.xml
@@ -3,16 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>example</groupId>
+        <artifactId>Advanced_OOP-Wrap</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>example</groupId>
-    <artifactId>Advanced_OOP-Wrap</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>task1Exception</module>
-        <module>task2Exception</module>
-        <module>task3Interface</module>
-    </modules>
+    <artifactId>task3Interface</artifactId>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
